--- a/src/Product.css
+++ b/src/Product.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 10px;
   padding: 20px;
   width: 100%;
@@ -46,6 +46,6 @@
 }
 
 .product__info {
-  height: 100px;
+  height: auto;
   margin-bottom: 15px;
 }
