--- a/src/Home.css
+++ b/src/Home.css
@@ -3,7 +3,7 @@
   z-index: 99;
   position: relative;
   margin-left: 5px;
-  top: -150px;
+  top: -180px;
   margin-right: 5px;
 }
 
@@ -21,4 +21,40 @@
   max-width: 1500px;
   z-index: 99;
   position: relative;
+}
+.home__head__nature {
+  font-family: "Courier New", Courier, monospace;
+  top: -180px;
+  position: relative;
+  margin: 3%;
+  font-size: 24px;
+  font-weight: bold;
+  color: green;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.home__head__nature img {
+  width: 50px;
+  height: 50px;
+}
+
+@media (max-width: 600px) {
+  .home__row {
+    display: grid;
+    z-index: 99;
+    position: relative;
+    top: -250px;
+    width: 22rem;
+    margin: auto;
+  }
+  .home {
+    display: grid;
+    justify-content: normal;
+  }
+  .home__head__nature {
+    top: -245px;
+    font-size: 22px;
+    padding: 10% 0;
+  }
 }
